# course-scraper

./: LICENSE  README.md  course_data.csv  course_scraper.py  pyproject.toml  urls.txt
