[tool.poetry]
name = "course-scraper"
version = "0.1.0"
description = "Scrapes Harvard's course information"
authors = ["mervebduman <https://github.com/mervebduman>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
